# ModernCpp

./: .gitignore  README.md  _config.yml
build_tools/cmake_learn/src/: main.cpp  tools.cpp
build_tools/compilation/: command.md  main  main.cpp
build_tools/linking/: main  tools.hpp
build_tools/task_2/: CMakeLists.txt
config/: install_llvm_toolchain.sh
core_cpp/: reference_pr  reference_pr.cpp  stream_pr  stream_pr.cpp  test  test.cpp
